--- a/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
+++ b/MyNewPlugin/projects/MyNewPlugin-vst3.vcxproj
@@ -260,30 +260,30 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\classfactoryhelpers.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fbuffer.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fcleanup.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fcommandline.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fdebug.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fdynlib.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fobject.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fstdmethods.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fstreamer.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fstring.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\hexbinary.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\timer.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\updatehandler.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\conststringtable.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\funknown.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\ustring.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\common\memorystream.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\common\pluginview.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstaudioeffect.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstbus.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstcomponent.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstcomponentbase.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstparameters.h" />
-    <ClInclude Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\classfactoryhelpers.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcleanup.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fcommandline.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstdmethods.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\hexbinary.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.h" />
+    <ClInclude Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\IControls.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.h" />
     <ClInclude Include="..\..\iPlug2\IGraphics\Controls\ITextEntryControl.h" />
@@ -344,33 +344,33 @@
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\baseiids.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fbuffer.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fdebug.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fdynlib.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fobject.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fstreamer.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\fstring.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\timer.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\source\updatehandler.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\thread\source\fcondition.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\base\thread\source\flock.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\conststringtable.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\coreiids.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\funknown.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\pluginterfaces\base\ustring.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\common\memorystream.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\common\pluginview.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\common\commoniids.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\main\dllmain.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\main\pluginfactory.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstaudioeffect.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstbus.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstcomponent.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstcomponentbase.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstinitiids.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstparameters.cpp" />
-    <ClCompile Include="..\..\iPlug2\Dependencies\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\baseiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fbuffer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdebug.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fdynlib.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fobject.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstreamer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\fstring.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\timer.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\source\updatehandler.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\fcondition.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\base\thread\source\flock.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\conststringtable.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\coreiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\funknown.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\pluginterfaces\base\ustring.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\memorystream.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\pluginview.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\common\commoniids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\dllmain.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\main\pluginfactory.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstaudioeffect.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstbus.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponent.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstcomponentbase.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstinitiids.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstparameters.cpp" />
+    <ClCompile Include="..\..\iPlug2\Dependencies\IPlug\VST3_SDK\public.sdk\source\vst\vstsinglecomponenteffect.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\IControls.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\IPopupMenuControl.cpp" />
     <ClCompile Include="..\..\iPlug2\IGraphics\Controls\ITextEntryControl.cpp" />
