output archive name

--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -96,8 +96,8 @@ jobs:
         with:
           name: ${{env.PROJECT_NAME}}-${{matrix.artifact_ext}}
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      # - name: Display structure of downloaded files
+      #   run: ls -R
 
       - name: Unzip files
         run: |
@@ -109,7 +109,6 @@ jobs:
         run: |
           curl -L "https://github.com/Tracktion/pluginval/releases/download/latest_release/pluginval_macOS.zip" -o pluginval.zip
           unzip pluginval
-          ls -la
           pluginval.app/Contents/MacOS/pluginval --skip-gui-tests --validate-in-process --output-dir "./bin" --validate ${{env.PROJECT_NAME}}.vst3 || exit 1
           mkdir -p ~/Library/Audio/Plug-Ins/Components
           mv ${{env.PROJECT_NAME}}.component ~/Library/Audio/Plug-Ins/Components
