--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -2,8 +2,8 @@ name: Release Native
 
 on:
   push:
-    tags:
-      - "v*"
+    # tags:
+    #   - "v*"
 
 env:
   PROJECT_NAME: MyNewPlugin
@@ -30,6 +30,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          draft: true
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body_path: ${{env.PROJECT_NAME}}/installer/changelog.txt
@@ -78,10 +79,12 @@ jobs:
       shell: bash
 
     - name: Build macOS
+      id: build_mac_step
       if: matrix.os == 'macOS-latest'
       run: |
         cd ${{env.PROJECT_NAME}}/scripts
-        ./makedist-mac.sh full installer
+        ARCHIVE_NAME=`./makedist-mac.sh zip full installer| tail -n 1`
+        echo "::set-output name=archive_name::$ARCHIVE_NAME"
       shell: bash
 
     - name: Add msbuild to PATH (Windows)
@@ -102,8 +105,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ${{env.PROJECT_NAME}}/${{matrix.build_dir}}/out/${{env.PROJECT_NAME}}-v1.0.0-mac-dSYMs.zip
-        asset_name: ${{env.PROJECT_NAME}}-v1.0.0-mac-dSYMs.zip
+        asset_path: ${{env.PROJECT_NAME}}/${{matrix.build_dir}}/out/${{ steps.build_mac_step.outputs.archive_name }}-dSYMs.zip
+        asset_name: ${{ steps.build_mac_step.outputs.archive_name }}-dSYMs.zip
         asset_content_type: application/zip
 
     - name: Upload mac dmg release asset
@@ -113,8 +116,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ${{env.PROJECT_NAME}}/${{matrix.build_dir}}/out/${{env.PROJECT_NAME}}-v1.0.0-mac.dmg
-        asset_name: ${{env.PROJECT_NAME}}-v1.0.0-mac.dmg
+        asset_path: ${{env.PROJECT_NAME}}/${{matrix.build_dir}}/out/${{ steps.build_mac_step.outputs.archive_name }}.dmg
+        asset_name: ${{ steps.build_mac_step.outputs.archive_name }}.dmg
         asset_content_type: application/octet-stream
 
     - name: Upload Windows pdb release asset
