update iPlug2 submodule

--- a/iPlug2OOS-common-mac.xcconfig
+++ b/iPlug2OOS-common-mac.xcconfig
@@ -14,6 +14,8 @@ CLANG_CXX_LIBRARY = libc++
 
 CLANG_WARN_DOCUMENTATION_COMMENTS = NO
 
+CLANG_ENABLE_OBJC_WEAK = YES
+
 // the minimum OS to support
 MACOSX_DEPLOYMENT_TARGET = 10.11
 
