--- a/MyNewPlugin/resources/MyNewPlugin-iOS-AUv3-Info.plist
+++ b/MyNewPlugin/resources/MyNewPlugin-iOS-AUv3-Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>XPC!</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>0.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
+	<string>0.1.0</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -40,16 +40,16 @@
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
-					<string>Ipef</string>
+					<string>lQhx</string>
 					<key>tags</key>
 					<array>
-						<string>Effects</string>
+						<string>Synth</string>
 						<string>size:{600,600}</string>
 					</array>
 					<key>type</key>
-					<string>aufx</string>
+					<string>aumu</string>
 					<key>version</key>
-					<integer>65536</integer>
+					<integer>256</integer>
 				</dict>
 			</array>
 		</dict>
