--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -16,7 +16,7 @@ jobs:
   
     steps:
       - name: Check out repository
-        uses: aactions/checkout@v2.3.1
+        uses: actions/checkout@v2.3.1
         with:
           submodules: recursive
           persist-credentials: false
