fix workflow scripts?

--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Get WAM SDKS
         run: |
           cd iPlug2/Dependencies/IPlug
-          ./download-iplug-libs.sh
+          ./download-iplug-sdks.sh
         shell: bash
 
       - name: Compile WAM
