--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -67,7 +67,7 @@ jobs:
           path: ${{env.PROJECT_NAME}}/build-web
 
       - name: Publish to pages
-        uses: JamesIves/github-pages-deploy-action@master
+        uses: JamesIves/github-pages-deploy-action@3.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_BRANCH: master
