--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .DS_Store
 xcuserdata
 MyNewPlugin/.vs
+MyNewPlugin/build-web/scripts/
+MyNewPlugin/build-web/*.data
+MyNewPlugin/build-web/imgs*
+.js
+MyNewPlugin/build-web/fonts.js
+MyNewPlugin/build-web/svgs.js
+MyNewPlugin/build-web/favicon.ico
