--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -1,9 +1,10 @@
 name: Release Native
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch
+  # push:
+    # tags:
+    #   - "v*"
 
 env:
   PROJECT_NAME: MyNewPlugin
