--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,5 @@
         "ms-vscode.cpptools",
     ],
     "postCreateCommand": "echo 'emcc=$(emcc --version)'",
-    "postStartCommand":  "cd iPlug2/Dependencies/IPlug; ./download-iplug-sdks.sh; pip3 install semver",
+    "postStartCommand":  "cd /root/workspace/iPlug2OOS/; git submodule init; git submodule update; cd iPlug2/Dependencies/IPlug; ./download-iplug-sdks.sh; pip3 install semver",
 }
