--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,5 @@
     "extensions": [
         "ms-vscode.cpptools",
     ],
-    "postCreateCommand": "echo 'emcc=$(emcc --version)'",
-    "postStartCommand":  "cd /root/workspace/iPlug2OOS/; git submodule init; git submodule update; cd iPlug2/Dependencies/IPlug; ./download-iplug-sdks.sh; pip3 install semver",
+    "postCreateCommand": "echo 'emcc=$(emcc --version)'"
 }
