--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -1,10 +1,10 @@
 name: Build WAM
 
 on:
-  workflow_dispatch
-  # push:
-    # tags:
-    #   - "v*"
+  # workflow_dispatch
+  push:
+    tags:
+      - "v*"
 
 env:
   PROJECT_NAME: MyNewPlugin
@@ -21,12 +21,6 @@ jobs:
         with:
           submodules: recursive
           persist-credentials: false
-
-
-      - name: Create branch
-        run: |
-          git switch -c deploy
-        shell: bash
 
       # - name: Setup Emscripten
       #   uses: lovasoa/setup-emscripten@master
@@ -75,7 +69,7 @@ jobs:
 
       - name: Publish to pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
-        env:
+        with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE_BRANCH: deploy
           BRANCH: gh-pages
