--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -71,6 +71,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BASE_BRANCH: deploy
+          BASE_BRANCH: master
           BRANCH: gh-pages
           FOLDER: ${{env.PROJECT_NAME}}/build-web
