--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ MyNewPlugin/build-web/imgs*
 MyNewPlugin/build-web/fonts.js
 MyNewPlugin/build-web/svgs.js
 MyNewPlugin/build-web/favicon.ico
+*.RPP-bak
+
