Add doxygen extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
     },
     "extensions": [
         "ms-vscode.cpptools",
+        "cschlosser.doxdocgen"
     ],
     "postCreateCommand": "echo 'emcc=$(emcc --version)'"
 }
