--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -29,7 +29,7 @@ jobs:
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
       - name: Setup Emscripten
-      - uses: mymindstorm/setup-emsdk@v7
+        uses: mymindstorm/setup-emsdk@v7
         with:
           version: '2.0.8'
 
