--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -32,6 +32,7 @@ jobs:
         uses: mymindstorm/setup-emsdk@v7
         with:
           version: '2.0.8'
+          actions-cache-folder: 'emsdk'
 
       # - name: Get emscripten
       #   run: |
