--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -105,11 +105,11 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: |
         cd ${{env.PROJECT_NAME}}\scripts
-        .\makedist-win.bat full installer > out.txt
-        type out.txt
-        $ARCHIVE_NAME = Get-Content out.txt -Tail 1
-        echo $ARCHIVE_NAME
-        echo "::set-output name=archive_name::$ARCHIVE_NAME"
+        .\makedist-win.bat full installer
+        #type out.txt
+        #$ARCHIVE_NAME = Get-Content out.txt -Tail 1
+        #echo $ARCHIVE_NAME
+        echo "::set-output name=archive_name::TEMP"
       shell: pwsh
 
     - name: Upload Windows pdb release asset
