--- a/.github/workflows/build-wam.yml
+++ b/.github/workflows/build-wam.yml
@@ -25,8 +25,8 @@ jobs:
       - name: setup python3
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+          python-version: '3.x'
+          architecture: 'x64'
 
       - name: Setup Emscripten
         uses: mymindstorm/setup-emsdk@v7
