--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -74,6 +74,7 @@ jobs:
       shell: bash
 
     - name: Get Archive Name
+       run: |
         $ARCHIVE_NAME=`python iPlug2/Scripts/get_archive_name.py ${{env.PROJECT_NAME}} ${{env.ARTIFACT_EXT}} full`
         echo "::set-output name=archive_name::$ARCHIVE_NAME"
       shell: bash
