--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -1,10 +1,10 @@
 name: Release Native
 
 on:
-  workflow_dispatch
-  # push:
-  #   tags:
-  #     - "v*"
+  # workflow_dispatch
+  push:
+    # tags:
+    #   - "v*"
 
 env:
   PROJECT_NAME: TemplateProject
