--- a/.github/workflows/release-native.yml
+++ b/.github/workflows/release-native.yml
@@ -117,7 +117,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       id: win_archivename_step
       run: |
-        $ARCHIVE_NAME=`python3 iPlug2/Scripts/get_archive_name.py ${{env.PROJECT_NAME}} ${{env.ARTIFACT_EXT}} full`
+        $ARCHIVE_NAME=`python3.exe iPlug2/Scripts/get_archive_name.py ${{env.PROJECT_NAME}} ${{env.ARTIFACT_EXT}} full`
         echo "::set-output name=archive_name::$ARCHIVE_NAME"
       shell: bash
 
